ui: improve page layout and content location consistency

--- a/src/ui/component/collection/CollectionInfo.pug
+++ b/src/ui/component/collection/CollectionInfo.pug
@@ -28,6 +28,7 @@ style.
 		display flex
 		flex-flow column nowrap
 		gap 2em
+		width 320px
 	.collection-info-author
 		color var(--c-text-weak)
 		display flex
