--- a/src/ui/component/multireddit/MultiredditAvatar.pug
+++ b/src/ui/component/multireddit/MultiredditAvatar.pug
@@ -22,6 +22,7 @@ style.
 	.multireddit-avatar
 		aspect-ratio 1
 		display inline-block
+		flex 0 0 auto
 		user-select none
 	.multireddit-avatar-image
 		border-radius 50%
@@ -29,8 +30,8 @@ style.
 		object-fit cover
 		width 100%
 	.multireddit-avatar-size-large
-		height 64px
+		width 64px
 	.multireddit-avatar-size-medium
-		height 32px
+		width 32px
 	.multireddit-avatar-size-small
-		height 16px
+		width 20px
