--- a/src/ui/component/multireddit/MultiredditInfo.pug
+++ b/src/ui/component/multireddit/MultiredditInfo.pug
@@ -27,9 +27,10 @@ script.
 			)
 
 aside.multireddit-info
-	header.multireddit-info-header
-		MultiredditAvatar(multireddit_name={multireddit_name} user_name={user_name})
-		h1.multireddit-info-name {user_name === 'r' ? 'r/' : ''}{multireddit_name.toLowerCase()}
+	{#if false}
+		header.multireddit-info-header
+			MultiredditAvatar(multireddit_name={multireddit_name} user_name={user_name})
+			h1.multireddit-info-name {user_name === 'r' ? 'r/' : ''}{multireddit_name.toLowerCase()}
 	{#if multireddit}
 		{#if multireddit.description_html}
 			FormattedHTML(html={multireddit.description_html})
@@ -49,6 +50,7 @@ style.
 		display flex
 		flex-flow column nowrap
 		gap 1.333em
+		width 320px
 	.multireddit-info-header
 		align-items center
 		display flex
