--- a/src/ui/component/post/PostTag.pug
+++ b/src/ui/component/post/PostTag.pug
@@ -15,7 +15,7 @@ data.post-tag(class='post-tag-{name}' title={description}) {name}
 style.
 	.post-tag
 		align-items center
-		border-radius 11px
+		border-radius 5px
 		display inline-flex
 		font-feature-settings 'calt', 'cpsp'
 		font-size 10px
@@ -23,7 +23,7 @@ style.
 		letter-spacing 0.666px
 		line-height 1
 		height 20px
-		padding 0 10px
+		padding 0 6px
 		text-transform uppercase
 		user-select none
 		white-space nowrap
@@ -37,11 +37,11 @@ style.
 		background indianred
 		color white
 	.post-tag-oc
-		background orangered
+		background var(--c-fixed-user)
 		color white
 	.post-tag-spoiler
 		background black
 		color white
 	.post-tag-sticky
-		background darkseagreen
+		background var(--c-fixed-mod)
 		color white
