--- a/src/ui/component/subreddit/SubredditInfo.pug
+++ b/src/ui/component/subreddit/SubredditInfo.pug
@@ -45,9 +45,10 @@ script.
 	Status(type='error' message='Error loading subreddit description.')
 {:else if name}
 	article.subreddit-info
-		header.subreddit-info-header
-			SubredditAvatar(name={name})
-			h1.subreddit-info-name(title={subreddit?.display_name || name}) {name.toLowerCase()}
+		{#if false}
+			header.subreddit-info-header
+				SubredditAvatar(name={name})
+				h1.subreddit-info-name(title={subreddit?.display_name || name}) {name.toLowerCase()}
 		ButtonGroup(action={value => tab = value} options={tabs} selected={tab})
 		{#if tab === 'rules'}
 			SubredditRules(name={name})
@@ -67,6 +68,7 @@ style.
 		display flex
 		flex-flow column nowrap
 		gap 2em
+		width 320px
 	.subreddit-info-description-empty
 		color var(--c-text-weak)
 	.subreddit-info-header
