--- a/src/ui/global.styl
+++ b/src/ui/global.styl
@@ -40,6 +40,10 @@ body
 	place-items center
 	scrollbar-width none
 	word-spacing calc(1px / 6)
+	--c-fixed-admin orangered
+	--c-fixed-exadmin rebeccapurple
+	--c-fixed-mod darkseagreen
+	--c-fixed-user cornflowerblue
 	--f-family-mono 'Consolas', monospace
 	--f-family-prop 'Inter', sans-serif
 	&::-webkit-scrollbar
