--- a/src/ui/component/comment/Comment.pug
+++ b/src/ui/component/comment/Comment.pug
@@ -110,19 +110,20 @@ script.
 	li(class={out_of_context ? 'comment-clip' : 'comment-tree'})
 		<!-- 'comment' role is draft status and not recognized yet -->
 		<!-- svelte-ignore a11y-unknown-role -->
-		article.comment(class:comment-deleted={(comment.author === '[deleted]' && comment.body[0] === '[' && comment.body.at(-1) === ']') || comment.removal_reason} class:comment-highlighted={id === focus_comment_id} class:comment-with-low-score={!comment.score_hidden && comment.score < 1} data-can-edit={comment.author === api.getUser() || null} data-can-interact={(api.isLoggedIn() && !comment.locked) || null} data-can-mod={comment.can_mod_post || null} data-distinguish={comment.distinguished || null} data-id={comment.id} data-mouse-menu='comment' data-pinned={comment.stickied || null} data-saved={comment.saved || null} on:mousemenu={e => interact(e.detail)} role='comment' title="{Time.sToAbsRelTimeStr(comment.created_utc)}{comment.edited ? ', edited ' + Time.sToAbsRelTimeStr(comment.edited) : ''}")
-			section.comment-meta
-				{#if api.isLoggedIn()}
-					button.comment-score(class:comment-score-downvoted={comment.likes === false} class:comment-score-upvoted={comment.likes === true} data-mouse-menu={false} on:contextmenu={e => e.preventDefault()} on:keydown={e => e.key === 'Enter' ? interact(e.shiftKey ? 'downvote' : 'upvote') : null} on:mousedown={e => e.button === 0 ? interact('upvote') : e.button === 2 ? interact('downvote') : null} title={comment.score_hidden ? 'score hidden' : comment.score - 1})
-						| {score_text(comment)}
-						{#if comment.controversiality > 0.25}
-							span.comment-score-controversial-marker(title='controversial comment') †
-				{:else}
-					data.comment-score(title={comment.score_hidden ? 'score hidden' : comment.score - 1})
-						| {score_text(comment)}
-						{#if comment.controversiality > 0.25}
-							span.comment-score-controversial-marker(title='controversial comment') †
-				UserByline(distinguish={comment.distinguished || (comment.is_submitter && 'submitter')} flair_color={comment.author_flair_background_color} flair_rich_text={comment.author_flair_richtext} flair_text={comment.author_flair_text} name={comment.author})
+		article.comment(class:comment-deleted={(comment.author === '[deleted]' && comment.body[0] === '[' && comment.body.at(-1) === ']') || comment.removal_reason} class:comment-highlighted={id === focus_comment_id} class:comment-with-low-score={!comment.score_hidden && comment.score < 1} data-can-edit={comment.author === api.getUser() || null} data-can-interact={(api.isLoggedIn() && !comment.locked) || null} data-can-mod={comment.can_mod_post || null} data-distinguish={comment.distinguished || null} data-id={comment.id} data-mouse-menu='comment' data-pinned={comment.stickied || null} data-saved={comment.saved || null} on:mousemenu={e => interact(e.detail)} role='comment' title="{Number.isFinite(comment.score) ? comment.score + ' points' : 'score unknown'}, {Time.sToAbsRelTimeStr(comment.created_utc)}{comment.edited ? ', edited ' + Time.sToAbsRelTimeStr(comment.edited) : ''}")
+			{#if false}
+				section.comment-meta
+					{#if api.isLoggedIn()}
+						button.comment-score(class:comment-score-downvoted={comment.likes === false} class:comment-score-upvoted={comment.likes === true} data-mouse-menu={false} on:contextmenu={e => e.preventDefault()} on:keydown={e => e.key === 'Enter' ? interact(e.shiftKey ? 'downvote' : 'upvote') : null} on:mousedown={e => e.button === 0 ? interact('upvote') : e.button === 2 ? interact('downvote') : null} title={comment.score_hidden ? 'score hidden' : comment.score - 1})
+							| {score_text(comment)}
+							{#if comment.controversiality > 0.25}
+								span.comment-score-controversial-marker(title='controversial comment') †
+					{:else}
+						data.comment-score(title={comment.score_hidden ? 'score hidden' : comment.score - 1})
+							| {score_text(comment)}
+							{#if comment.controversiality > 0.25}
+								span.comment-score-controversial-marker(title='controversial comment') †
+					UserByline(distinguish={comment.distinguished || (comment.is_submitter && 'submitter')} flair_color={comment.author_flair_background_color} flair_rich_text={comment.author_flair_richtext} flair_text={comment.author_flair_text} name={comment.author})
 			FormattedHTML(html={comment.body_html})
 		{#if reporting}
 			Popup(on:close={() => reporting = false})
@@ -151,6 +152,7 @@ style.
 		align-items flex-start
 		display flex
 		flex-flow column nowrap
+		max-width 320px
 		:global(& > .md)
 			background var(--c-tint-normal)
 			border-radius 1em
