--- a/src/ui/component/subreddit/SubredditAvatar.pug
+++ b/src/ui/component/subreddit/SubredditAvatar.pug
@@ -22,6 +22,7 @@ style.
 	.subreddit-avatar
 		aspect-ratio 1
 		display inline-block
+		flex 0 0 auto
 		user-select none
 	.subreddit-avatar-image
 		border-radius 50%
@@ -33,4 +34,4 @@ style.
 	.subreddit-avatar-size-medium
 		width 32px
 	.subreddit-avatar-size-small
-		width 16px
+		width 20px
