--- a/src/ui/component/user/UserInfo.pug
+++ b/src/ui/component/user/UserInfo.pug
@@ -28,12 +28,9 @@ script.
 	.user-info-loading Loading...
 {:else if user}
 	aside.user-info
-		UserAvatar(name={name} size='xlarge')
-		h1.user-name(title={user?.name || name}) {user?.name || name.toLowerCase()}
-		section.user-stats
-			span.user-age(title='created {Time.sToAbsTimeStr(user.created_utc)}') {Time.sToRelTimeStr(user.created_utc, { abbr: true })}
-			| ·
-			span.user-karma {user.total_karma} karma
+		{#if false}
+			UserAvatar(name={name} size='xlarge')
+			h1.user-name(title={user?.name || name}) {user?.name || name.toLowerCase()}
 		{#if user.is_suspended}
 			Status(type='error' message="This user is suspended.")
 		{:else if user.is_blocked}
@@ -46,6 +43,10 @@ script.
 						figcaption.user-trophy-description
 							strong.user-trophy-name(title={trophy.name}) {trophy.name}
 							span.user-trophy-comment(title={trophy?.description}) {trophy?.description || ''}
+		section.user-stats
+			span.user-age(title='created {Time.sToAbsTimeStr(user.created_utc)}') {Time.sToRelTimeStr(user.created_utc, { abbr: true })}
+			| ·
+			span.user-karma {user.total_karma} karma
 
 style.
 	.user-age
@@ -54,6 +55,7 @@ style.
 		display flex
 		flex-flow column nowrap
 		gap 2em
+		width 320px
 	.user-info-loading
 		color var(--c-text-weak)
 	.user-name
