ui: limit width of Status component for page balance

--- a/src/ui/component/generic/Status.pug
+++ b/src/ui/component/generic/Status.pug
@@ -17,6 +17,7 @@ style.
 		flex-flow column nowrap
 		font-weight var(--f-wght-strong)
 		gap 1em
+		max-width 384px
 		padding 1em
 		width 100%
 	.status-body
