ui: remove post hover style; rework top subreddit hover style

--- a/src/ui/component/post/Post.pug
+++ b/src/ui/component/post/Post.pug
@@ -281,12 +281,8 @@ style.
 		background var(--c-tint-normal)
 		border-radius 1em
 		width 320px
-		&:hover
-			outline 1px solid
-		.post-and-comments-expanded &
+		.post-and-comments-expanded > &
 			width 384px
-			&:hover
-				outline none
 		:global(.post-crosspost-link &)
 			width 100% !important
 	.post-and-comments
