--- a/src/ui/layout/overlay/OverlayNetworkStatus.pug
+++ b/src/ui/layout/overlay/OverlayNetworkStatus.pug
@@ -2,8 +2,8 @@ script.
 	import { onMount, onDestroy } from 'svelte'
 
 	import api from '../../../api/index.js'
+	import { DEMO_API_CLIENT_ID } from '../../../config/demo_key.js'
 	import { Time, TimeSource } from '../../../lib/index.js'
-	import { DEMO_API_CLIENT_ID } from '../../init/config/demo_key.js'
 	import Button from '../../component/generic/Button.pug'
 	import Popup from '../../component/generic/Popup.pug'
 	import TextInput from '../../component/generic/TextInput.pug'
