internals: reorg state file

--- a/src/ui/component/post/Post.pug
+++ b/src/ui/component/post/Post.pug
@@ -4,7 +4,7 @@ script.
 	import api from '../../../api/index.js'
 	import { Time } from '../../../lib/index.js'
 	import { apply_query_parameters, format_url, relativize_url } from '../../url/index.js'
-	import account_state from '../../state/account_state.coffee'
+	import account_state from '../../account_state.coffee'
 	import html_embeds from './embeds/html_embeds.coffee'
 	import iframe_embeds from './embeds/iframe_embeds.coffee'
 
