--- a/src/ui/component/post/PostVideoPlayer.pug
+++ b/src/ui/component/post/PostVideoPlayer.pug
@@ -3,7 +3,7 @@ script.
 
 	import { Time } from '../../../lib/index.js'
 	import { virtual_hotkeys } from '../generic/action/hotkeys.coffee'
-	import account_state from '../../state/account_state.coffee'
+	import account_state from '../../account_state.coffee'
 	
 	import Button from '../generic/Button.pug'
 	
