--- a/src/ui/component/feed/Feed.pug
+++ b/src/ui/component/feed/Feed.pug
@@ -2,7 +2,7 @@ script.
 	import api from '../../../api/index.js'
 	import { format_url } from '../../url/index.js'
 
-	import account_state from '../../state/account_state.coffee'
+	import account_state from '../../account_state.coffee'
 	
 	import Button from '../generic/Button.pug'
 	import Comment from '../comment/Comment.pug'
