--- a/src/ui/component/layout/LayoutFrontpage.pug
+++ b/src/ui/component/layout/LayoutFrontpage.pug
@@ -1,10 +1,10 @@
 script.
 	import { getContext } from 'svelte'
 
-	import api from '../../api/index.js'
+	import api from '../../../api/index.js'
 
-	import Status from '../component/generic/Status.pug'
-	import SubredditAvatar from '../component/subreddit/SubredditAvatar.pug'
+	import Status from '../generic/Status.pug'
+	import SubredditAvatar from '../subreddit/SubredditAvatar.pug'
 
 	SUBREDDITS_OPTIMAL_COUNT = 49
 
