--- a/src/ui/component/layout/LayoutPost.pug
+++ b/src/ui/component/layout/LayoutPost.pug
@@ -1,22 +1,22 @@
 script.
-	import api from '../../api/index.js'
+	import api from '../../../api/index.js'
 	
-	import CollectionAvatar from '../component/collection/CollectionAvatar.pug'
-	import CollectionInfo from '../component/collection/CollectionInfo.pug'
-	import Feed from '../component/feed/Feed.pug'
-	import FeedFilterOptions from '../component/feed/FeedFilterOptions.pug'
-	import FeedSearchOptions from '../component/feed/FeedSearchOptions.pug'
-	import FeedSortOptions from '../component/feed/FeedSortOptions.pug'
-	import FeedSummary from '../component/feed/FeedSummary.pug'
-	import MultiredditAvatar from '../component/multireddit/MultiredditAvatar.pug'
-	import MultiredditInfo from '../component/multireddit/MultiredditInfo.pug'
-	import Post from '../component/post/Post.pug'
-	import SubredditAvatar from '../component/subreddit/SubredditAvatar.pug'
-	import SubredditInfo from '../component/subreddit/SubredditInfo.pug'
-	import SubredditNavigation from '../component/subreddit/SubredditNavigation.pug'
-	import SubredditWikipage from '../component/subreddit/SubredditWikipage.pug'
-	import UserAvatar from '../component/user/UserAvatar.pug'
-	import UserInfo from '../component/user/UserInfo.pug'
+	import CollectionAvatar from '../collection/CollectionAvatar.pug'
+	import CollectionInfo from '../collection/CollectionInfo.pug'
+	import Feed from '../feed/Feed.pug'
+	import FeedFilterOptions from '../feed/FeedFilterOptions.pug'
+	import FeedSearchOptions from '../feed/FeedSearchOptions.pug'
+	import FeedSortOptions from '../feed/FeedSortOptions.pug'
+	import FeedSummary from '../feed/FeedSummary.pug'
+	import MultiredditAvatar from '../multireddit/MultiredditAvatar.pug'
+	import MultiredditInfo from '../multireddit/MultiredditInfo.pug'
+	import Post from '../post/Post.pug'
+	import SubredditAvatar from '../subreddit/SubredditAvatar.pug'
+	import SubredditInfo from '../subreddit/SubredditInfo.pug'
+	import SubredditNavigation from '../subreddit/SubredditNavigation.pug'
+	import SubredditWikipage from '../subreddit/SubredditWikipage.pug'
+	import UserAvatar from '../user/UserAvatar.pug'
+	import UserInfo from '../user/UserInfo.pug'
 
 	export feed = null
 	export post = null
