--- a/src/ui/component/post/PostVideoPlayer.pug
+++ b/src/ui/component/post/PostVideoPlayer.pug
@@ -3,7 +3,7 @@ script.
 
 	import { Time } from '../../../lib/index.js'
 	import { virtual_hotkeys } from '../generic/action/hotkeys.coffee'
-	import account_state from '../../account_state.coffee'
+	import AccountSettings from '../../persistence/AccountSettings.coffee'
 	
 	import Button from '../generic/Button.pug'
 	
@@ -49,7 +49,7 @@ script.
 			audio?.currentTime = video.currentTime
 	set_volume = (value) ->
 		audio.volume = clamp(0, 1, value)
-		account_state.set_media_volume(audio.volume)
+		AccountSettings.set_media_volume(audio.volume)
 	scrobbler = null
 	toggle_fullscreen = ->
 		document.activeElement.blur() # prevent browser from forcing focus style for buttons on fullscreen change
@@ -90,13 +90,13 @@ script.
 			set_time(video.currentTime + 10)
 		m: ->
 			if audio.volume > 0
-				account_state.set_media_premute_volume(audio.volume)
+				AccountSettings.set_media_premute_volume(audio.volume)
 				set_volume(0)
 			else
-				set_volume(account_state.get_media_premute_volume() or 0.5)
+				set_volume(AccountSettings.get_media_premute_volume() or 0.5)
 
 	onMount ->
-		audio.volume = account_state.get_media_volume() or 0
+		audio.volume = AccountSettings.get_media_volume() or 0
 		player.addEventListener('fullscreenchange', (e) ->
 			if document.fullscreenElement? and document.fullscreenElement is player
 				fullscreen = true
