post: adjust comment editor spacing to fit 320px comment width

--- a/src/ui/component/comment/CommentEditor.pug
+++ b/src/ui/component/comment/CommentEditor.pug
@@ -30,17 +30,16 @@ form.comment-editor
 
 style.
 	.comment-editor
-		max-width 48ch
+		max-width 320px
 	.comment-editor-actions
 		display flex
 		justify-content flex-end
-		padding 12px 0
+		padding 1em 0
 	.comment-editor-text-field
 		border 1px solid
-		border-radius 12px
+		border-radius 1em
 		font-family var(--f-family-mono)
-		font-size 12px
 		line-height inherit
-		padding 9px
+		padding 1em
 		resize none
 		white-space pre-line
