post: abbreviate controversial sort label to improve sort button layout fit

--- a/src/ui/component/post/Post.pug
+++ b/src/ui/component/post/Post.pug
@@ -39,7 +39,7 @@ script.
 		{ label: 'Old', value: 'old' }
 		{ label: 'New', value: 'new' }
 		{ label: 'Q&A', value: 'qa' }
-		{ label: 'Controversial', value: 'controversial' }
+		{ label: 'Contro.', value: 'controversial' }
 	]
 	comments_sort_options_chat = [
 		{ label: 'New (Chat Mode)', value: 'new' }
