internals: fix misaligned account button imports

--- a/src/ui/component/account/AccountLoginButton.pug
+++ b/src/ui/component/account/AccountLoginButton.pug
@@ -1,7 +1,7 @@
 script.
-	import api from '../../../../api/index.js'
+	import api from '../../../api/index.js'
 
-	import Button from '../../generic/Button.pug'
+	import Button from '../generic/Button.pug'
 
 	scopes = [
 		'account'
