ui: make Button padding correct when displayed both horiz. and vert.

--- a/src/ui/component/generic/Button.pug
+++ b/src/ui/component/generic/Button.pug
@@ -49,7 +49,8 @@ style.
 		display inline-flex
 		gap 5px
 		letter-spacing 0.333px
-		padding 3px 9px
+		padding-block 3px
+		padding-inline 9px
 		position relative
 		text-align left
 		user-select none
