--- a/src/ui/component/layout/LayoutPost.pug
+++ b/src/ui/component/layout/LayoutPost.pug
@@ -1,6 +1,8 @@
 script.
 	import api from '../../../api/index.js'
 	
+	import AccountLoginButton from '../account/AccountLoginButton.pug'
+	import AccountLogoutButton from '../account/AccountLogoutButton.pug'
 	import CollectionAvatar from '../collection/CollectionAvatar.pug'
 	import CollectionInfo from '../collection/CollectionInfo.pug'
 	import Feed from '../feed/Feed.pug'
@@ -13,7 +15,7 @@ script.
 	import Post from '../post/Post.pug'
 	import SubredditAvatar from '../subreddit/SubredditAvatar.pug'
 	import SubredditInfo from '../subreddit/SubredditInfo.pug'
-	import SubredditNavigation from '../subreddit/SubredditNavigation.pug'
+	import SubredditStatus from '../subreddit/SubredditStatus.pug'
 	import SubredditWikipage from '../subreddit/SubredditWikipage.pug'
 	import UserAvatar from '../user/UserAvatar.pug'
 	import UserInfo from '../user/UserInfo.pug'
@@ -22,22 +24,50 @@ script.
 	export post = null
 	export wiki = null
 
+menu#app-global-navigation
+	a#app-home-link(href='/')
+		img#app-logo-dark(alt='Arc logo' src='/brand_triangle_dark.svg')
+		img#app-logo-light(alt='Arc logo' src='/brand_triangle_light.svg')
+	menu#app-account-management
+		{#if api.isLoggedIn()}
+			AccountLogoutButton
+		{:else}
+			AccountLoginButton
 nav#app-main-navigation
 	{#if feed}
 		{#if feed?.type === 'multireddit_posts' || feed?.type === 'subreddit_posts' || feed?.type === 'user_posts' || wiki?.page_name}
-			{#if feed.type === 'collection_posts'}
-				{#key feed.collection_id}
-					CollectionAvatar(id={feed.collection_id} size='large')
-			{#if feed.type === 'multireddit_posts'}
-				{#key feed.user_name}
-					{#key feed.multireddit_name}
-						MultiredditAvatar(multireddit_name={feed.multireddit_name} size='large' user_name={feed.user_name})
-			{:else if feed.type === 'subreddit_posts' || wiki?.page_name}
+			header#app-feed-header
+				{#if feed.type === 'collection_posts'}
+					{#key feed.collection_id}
+						CollectionAvatar(id={feed.collection_id} size='large')
+				{#if feed.type === 'multireddit_posts'}
+					{#key feed.user_name}
+						{#key feed.multireddit_name}
+							MultiredditAvatar(multireddit_name={feed.multireddit_name} size='large' user_name={feed.user_name})
+				{:else if feed.type === 'subreddit_posts' || wiki?.page_name}
+					{#key feed.subreddit_name}
+						SubredditAvatar(name={feed.subreddit_name} size='large')
+				{:else if feed.type === 'user_posts'}
+					{#key feed.user_name}
+						UserAvatar(name={feed.user_name} size='large')
+				{:else}
+					a(href='/')
+						img#app-feed-icon-default(alt='Reddit logo' src='/reddit_logo.svg')
+				section#app-feed-header-layout
+					{#if feed.type === 'subreddit_posts'}
+						{#key feed.subreddit_name}
+							SubredditStatus(name={feed.subreddit_name})
+					{:else}
+						#empty
+					menu#app-feed-options
+						{#key feed.subreddit_name}
+							FeedSortOptions(collection_id={feed.collection_id} filter={feed.filter} multireddit_name={feed.multireddit_name} sort={feed.sort} subreddit_name={feed.subreddit_name} time_range={feed.time_range} type={feed.type} user_name={feed.user_name} wikipage_name={wiki?.page_name})
+						{#if feed.type.endsWith('posts')}
+							FeedFilterOptions(filter={feed.filter})
+		{#if feed.sort === 'search'}
+			menu#app-feed-search
 				{#key feed.subreddit_name}
-					SubredditAvatar(name={feed.subreddit_name} size='large')
-			{:else if feed.type === 'user_posts'}
-				{#key feed.user_name}
-					UserAvatar(name={feed.user_name} size='large')
+					FeedSearchOptions(multireddit_name={feed.multireddit_name} search_sort={feed.search_sort} search_text={feed.search_text} subreddit_name={feed.subreddit_name})
 		{#key feed.collection_id}
 			{#key feed.filter}
 				{#key feed.multireddit_name}
@@ -47,20 +77,7 @@ nav#app-main-navigation
 								{#key feed.subreddit_name}
 									{#key feed.time_range}
 										{#key feed.user_name}
-											menu#app-feed-options
-												{#key feed.type}
-													{#key feed.subreddit_name}
-														FeedSortOptions(collection_id={feed.collection_id} filter={feed.filter} multireddit_name={feed.multireddit_name} sort={feed.sort} subreddit_name={feed.subreddit_name} time_range={feed.time_range} type={feed.type} user_name={feed.user_name} wikipage_name={wiki?.page_name})
-												{#if feed.type.endsWith('posts')}
-													FeedFilterOptions(filter={feed.filter})
-											{#if feed.sort === 'search'}
-												menu#app-feed-search
-													{#key feed.subreddit_name}
-														FeedSearchOptions(multireddit_name={feed.multireddit_name} search_sort={feed.search_sort} search_text={feed.search_text} subreddit_name={feed.subreddit_name})
 											Feed(collection_id={feed.collection_id} filter={feed.filter} multireddit_name={feed.multireddit_name} search_sort={feed.search_sort} search_text={feed.search_text} sort={feed.sort} subreddit_name={feed.subreddit_name} time_range={feed.time_range} type={feed.type} user_name={feed.user_name})
-	{:else}
-		a(href='/')
-			img#app-home-icon(alt='Reddit logo' src='/reddit_logo.svg')
 main#app-main-content
 	{#if wiki}
 		{#key wiki.subreddit_name}
@@ -93,19 +110,47 @@ main#app-main-content
 				UserInfo(name={feed.user_name})
 
 style.
+	#app-feed-header
+		display flex
+		justify-content space-between
+		width 100%
+	#app-feed-header-layout
+		display flex
+		flex-flow column nowrap
+		height 100%
+		justify-content space-between
+	#app-feed-icon-default
+		aspect-ratio 1
+		height 64px
 	#app-feed-options
 		display flex
 		gap 1em
-	#app-home-icon
-		aspect-ratio 1
-		height 64px
+	#app-logo-dark
+		display none
+		:global(.color-strategy-light-bg &)
+		:global(.color-strategy-ultralight-bg &)
+			display block
+	#app-logo-light
+		display none
+		:global(.color-strategy-dark-bg &)
+		:global(.color-strategy-ultradark-bg &)
+			display block
+	#app-global-navigation
+		align-items center
+		display flex
+		gap 1em
+		left 1em
+		position fixed
+		top 1em
+		writing-mode vertical-lr
+		z-index 1
 	#app-main-content
 		align-items flex-start
 		display flex
 		flex-flow column nowrap
 		gap 2.333em
 		margin-left 50%
-		padding 4em 0
+		padding 4.333em 0
 		width 50%
 	#app-main-navigation
 		display flex
