frontpage: save 0.5s load time by pulling 1X subs instead of 2X
Previously we randomized the 49 frontpage subs out of a pool of the 98
most popular subs on each load - the reason being to have more variety
in the subs shown. However the load time cost of this is just too much
over simply pulling and showing the top 49 exactly. Plus, it's arguable
that always showing the "top" of the most-popular list is a better user
experience anyway.

--- a/src/ui/component/layout/LayoutFrontpage.pug
+++ b/src/ui/component/layout/LayoutFrontpage.pug
@@ -15,7 +15,7 @@ script.
 	subreddits_data = {}
 	subreddits_randomized = []
 
-	api.loadWatch(api.ID((if api.isLoggedIn() then 'account_subreddits_subscribed' else 'global_subreddits_popular'), SUBREDDITS_OPTIMAL_COUNT * 2), ({ data, error, loading }) ->
+	api.loadWatch(api.ID((if api.isLoggedIn() then 'account_subreddits_subscribed' else 'global_subreddits_popular'), SUBREDDITS_OPTIMAL_COUNT), ({ data, error, loading }) ->
 		subreddits = data or []
 		if subreddits.length
 			for subreddit_name in subreddits
